--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Robinhoeh",
   "version": "0.1.0",
-  "homepage": "http://neilff.github.io/raceday",
+  "homepage": "http://Robinhoeh.github.io/raceday",
   "private": true,
   "dependencies": {
     "react-scripts": "1.0.14"
